# consolidar_planilhas_contadoria

./: Consolidado.xlsx  liquidacao.csv  pyproject.toml  token.json  transform.py  transform1.py  transform3.py  transform4.py
