[tool.poetry]
name = "consolidacao"
version = "0.1.0"
description = ""
authors = ["Fasri <106215404+Fasri@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
google = "^3.0.0"
auth = "^0.5.3"
auth2 = "^1.1"
pydrive = "^1.3.1"
pydrive2 = "^1.20.0"
google-auth = "^2.35.0"
google-auth-oauthlib = "^1.2.1"
google-auth-httplib2 = "^0.2.0"
google-api-python-client = "^2.149.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
